violating_resources/pod-security-policy/host-filesystem/samples/psp-host-filesystem/example_allowed.yaml
apiVersion: v1
kind: Pod
metadata: # kpt-merge: /nginx-host-filesystem
  name: psp-host-filesystem-example-allowed
  labels:
    app: nginx-host-filesystem-disallowed
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
        - mountPath: /cache
          name: cache-volume
          readOnly: true
  volumes:
    - name: cache-volume
      hostPath:
        path: /foo/bar
